<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/tabbar_menu"
        android:title="@string/nav_dish" />
    <item
        android:id="@+id/nav_bus"
        android:icon="@drawable/tabbar_bus"
        android:title="@string/nav_bus" />
    <item
        android:id="@+id/nav_sleep"
        android:icon="@drawable/tabbar_sleep"
        android:title="@string/nav_sleep" />
    <item
        android:id="@+id/nav_repair"
        android:icon="@drawable/tabbar_reapair"
        android:title="@string/nav_repair" />
    <item
        android:id="@+id/nav_board"
        android:icon="@drawable/tabbar_board"
        android:title="@string/nav_board" />
</menu>